# XDSEC-AISec-PublicShow

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/pages/: bad_words.py  info_leaking.py  remove_everything.py
src/prompts/: __init__.py
src/prompts/bad_words/: system.md.jinja
src/prompts/info_leaking/: system.md.jinja
src/prompts/remove_everything/: system.md.jinja  tools.json
